[gd_scene load_steps=4 format=3 uid="uid://1hnhj7bog3xy"]

[ext_resource type="Script" uid="uid://csg2kcg8mcikf" path="res://pause_menu.gd" id="1_lti8b"]
[ext_resource type="AudioStream" uid="uid://bphdndih1guy0" path="res://Menuclick.wav" id="2_mae5d"]
[ext_resource type="AudioStream" uid="uid://o3kdskrrphvb" path="res://menuhover.wav" id="3_4hy44"]

[node name="pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lti8b")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume
"

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="menu_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_mae5d")

[node name="menu_hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4hy44")

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
